# msscan

./: .gitignore  LICENSE  README.md  README_SHORT.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: test.yml
msscan/: __init__.py  __main__.py  cli.py
msscan/cli/: __init__.py  app.py  headless.py  interactive.py
msscan/core/: config.py  context.py  engine.py  events.py  exceptions.py  http_client.py  plugins.py  result.py
msscan/output/: base.py  console.py  html_report.py  json_report.py  sarif_report.py
msscan/scanners/: base.py  csrf.py  headers.py  mixins.py  open_redirect.py  sqli.py  ssrf.py  subdomain.py  xss.py
msscan/ui/: module_selector.py  overlay.py  results_viewer.py
msscan/utils/: helpers.py  payloads.py
payloads/: redirects.txt  sqli.txt  ssrf.txt  subdomains.txt  xss.txt
tests/: conftest.py  test_cli_headless.py  test_config.py  test_csrf.py  test_engine.py  test_headers.py  test_open_redirect.py  test_output_json.py  test_output_sarif.py  test_plugins.py  test_sqli.py  test_ssrf.py  test_subdomain.py  test_xss.py
