[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msscan"
version = "1.0.0"
description = "CLI-based Web Application Security Scanner"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Mert"}]

dependencies = [
    "httpx",
    "anyio",
    "typer",
    "rich",
    "jinja2",
    "dnspython",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[project.scripts]
msscan = "msscan.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
