[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msscan"
version = "2.0.0"
description = "CLI-based Web Application Security Scanner"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Mert"}]

dependencies = [
    "httpx>=0.27",
    "anyio",
    "typer>=0.12",
    "rich>=13.0",
    "jinja2",
    "dnspython",
    "textual>=0.50",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx", "ruff", "mypy"]

[project.scripts]
msscan = "msscan.cli:app"

[project.entry-points."msscan.scanners"]
xss = "msscan.scanners.xss:Scanner"
sqli = "msscan.scanners.sqli:Scanner"
csrf = "msscan.scanners.csrf:Scanner"
open_redirect = "msscan.scanners.open_redirect:Scanner"
ssrf = "msscan.scanners.ssrf:Scanner"
headers = "msscan.scanners.headers:Scanner"
subdomain = "msscan.scanners.subdomain:Scanner"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
